--- a/login.html
+++ b/login.html
@@ -3,34 +3,260 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Login - CRM</title>
+  <title>Login y Registro - CRM</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <style>
+    .form-container {
+      max-width: 400px;
+      margin: auto;
+      padding: 20px;
+      background-color: #fff;
+      border-radius: 5px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+      display: none;
+    }
+
+    .form-container.active {
+      display: block;
+    }
+
+    .spinner-border {
+      display: none;
+    }
+
+    .message {
+      margin-top: 10px;
+      display: none;
+    }
+
+    .message--success {
+      color: #28a745;
+    }
+
+    .message--error {
+      color: #dc3545;
+    }
+  </style>
 </head>
 <body>
-  <div class="container">
-    <div class="login">
-      <h2 class="login__title">Iniciar Sesión</h2>
-      <form id="loginForm">
-        <div class="form-group">
-          <label for="email" class="login__label">Correo Electrónico</label>
-          <input type="email" class="form-control login__input" id="email" placeholder="Ingresa tu correo" required>
+
+<div class="container">
+  <div class="row justify-content-center mt-5">
+    <div class="col-md-6">
+      <!-- Mensajes -->
+      <div id="messages"></div>
+
+      <!-- Login Form -->
+      <div id="loginForm" class="form-container active">
+        <h3 class="text-center">Iniciar Sesión</h3>
+        <div class="mb-3">
+          <label for="loginEmail" class="form-label">Correo electrónico</label>
+          <input type="email" class="form-control" id="loginEmail" placeholder="Ingrese su correo">
         </div>
-        <div class="form-group">
-          <label for="password" class="login__label">Contraseña</label>
-          <input type="password" class="form-control login__input" id="password" placeholder="Ingresa tu contraseña" required>
+        <div class="mb-3">
+          <label for="loginPassword" class="form-label">Contraseña</label>
+          <input type="password" class="form-control" id="loginPassword" placeholder="Ingrese su contraseña">
         </div>
-        <button type="submit" class="btn btn-primary login__button">Iniciar Sesión</button>
-      </form>
-      <div id="loginError" class="alert alert-danger mt-3" style="display: none;"></div>
+        <button id="loginBtn" class="btn btn-primary w-100">Iniciar sesión</button>
+        <div class="spinner-border text-primary mt-3" role="status">
+          <span class="visually-hidden">Cargando...</span>
+        </div>
+        <button id="googleLoginBtn" class="btn btn-danger w-100 mt-2">Iniciar sesión con Google</button>
+        <div class="mt-3 text-center">
+          <a href="#" id="linkForgotPassword">¿Olvidaste tu contraseña?</a><br>
+          <a href="#" id="linkToRegister">¿No tienes cuenta? Regístrate</a>
+        </div>
+      </div>
+
+      <!-- Register Form -->
+      <div id="registerForm" class="form-container">
+        <h3 class="text-center">Crear Cuenta</h3>
+        <div class="mb-3">
+          <label for="registerEmail" class="form-label">Correo electrónico</label>
+          <input type="email" class="form-control" id="registerEmail" placeholder="Ingrese su correo">
+        </div>
+        <div class="mb-3">
+          <label for="registerPassword" class="form-label">Contraseña</label>
+          <input type="password" class="form-control" id="registerPassword" placeholder="Ingrese su contraseña">
+        </div>
+        <div class="mb-3">
+          <label for="registerName" class="form-label">Nombre</label>
+          <input type="text" class="form-control" id="registerName" placeholder="Ingrese su nombre completo">
+        </div>
+        <button id="registerBtn" class="btn btn-primary w-100">Registrar</button>
+        <div class="spinner-border text-primary mt-3" role="status">
+          <span class="visually-hidden">Cargando...</span>
+        </div>
+        <button id="googleRegisterBtn" class="btn btn-danger w-100 mt-2">Registrarse con Google</button>
+        <div class="mt-3 text-center">
+          <a href="#" id="linkToLogin">¿Ya tienes cuenta? Inicia sesión</a>
+        </div>
+      </div>
+
+      <!-- Modal Recuperación Contraseña -->
+      <div id="forgotPasswordForm" class="form-container">
+        <h3 class="text-center">Recuperar Contraseña</h3>
+        <div class="mb-3">
+          <label for="resetEmail" class="form-label">Correo electrónico</label>
+          <input type="email" class="form-control" id="resetEmail" placeholder="Ingrese su correo">
+        </div>
+        <button id="resetPasswordBtn" class="btn btn-primary w-100">Enviar enlace de recuperación</button>
+        <div class="spinner-border text-primary mt-3" role="status">
+          <span class="visually-hidden">Cargando...</span>
+        </div>
+        <div class="mt-3 text-center">
+          <a href="#" id="linkBackToLogin">Iniciar sesión</a>
+          <a href="#" id="linkToRegister">¿No tienes cuenta? Regístrate</a>
+        </div>
+      </div>
+
     </div>
   </div>
+</div>
 
-  <!-- Cargar jQuery -->
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-  
-  <!-- Declarar los scripts como módulos -->
-  <script type="module" src="firebaseConfig.js"></script>
-  <script type="module" src="login.js"></script>
+<!-- Firebase Scripts -->
+<script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-app.js";
+  import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, sendPasswordResetEmail, GoogleAuthProvider, signInWithPopup } from "https://www.gstatic.com/firebasejs/10.13.1/firebase-auth.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyBssh0Gy2h3GMo_254FOwdgUKZ6hsyJxyU",
+    authDomain: "casi-angeles-3605f.firebaseapp.com",
+    projectId: "casi-angeles-3605f",
+    storageBucket: "casi-angeles-3605f.appspot.com",
+    messagingSenderId: "174828884341",
+    appId: "1:174828884341:web:7e4486d5484f17ad23833c"
+  };
+
+  // Inicializar Firebase
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth();
+
+  // Mostrar spinner
+  function showLoader(show) {
+    if (show) {
+      $('.spinner-border').show();
+    } else {
+      $('.spinner-border').hide();
+    }
+  }
+
+  // Mostrar mensajes de éxito/error
+  function showMessage(type, message) {
+    const alertBox = `<div class="alert alert-${type} alert-dismissible fade show" role="alert">
+                        ${message}
+                        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                      </div>`;
+    $('#messages').html(alertBox);
+  }
+
+  // Login con correo y contraseña
+  $('#loginBtn').on('click', function () {
+    const email = $('#loginEmail').val();
+    const password = $('#loginPassword').val();
+
+    if (email && password) {
+      showLoader(true);
+      signInWithEmailAndPassword(auth, email, password)
+        .then(userCredential => {
+          showMessage('success', `Bienvenido ${userCredential.user.email}`);
+          // Redirigir a la página principal o dashboard
+          window.location.href = 'dashboard.html';
+        })
+        .catch(error => showMessage('danger', `Error: ${error.message}`))
+        .finally(() => showLoader(false));
+    } else {
+      showMessage('warning', 'Por favor, completa todos los campos.');
+    }
+  });
+
+  // Registro con correo y contraseña
+  $('#registerBtn').on('click', function () {
+    const email = $('#registerEmail').val();
+    const password = $('#registerPassword').val();
+    const name = $('#registerName').val();
+
+    if (email && password && name) {
+      showLoader(true);
+      createUserWithEmailAndPassword(auth, email, password)
+        .then(userCredential => {
+          showMessage('success', `Registro exitoso, bienvenido ${name}`);
+          // Redirigir a la página principal o dashboard
+          window.location.href = 'dashboard.html';
+        })
+        .catch(error => showMessage('danger', `Error: ${error.message}`))
+        .finally(() => showLoader(false));
+    } else {
+      showMessage('warning', 'Por favor, completa todos los campos.');
+    }
+  });
+
+  // Login con Google
+  $('#googleLoginBtn').on('click', function () {
+    const provider = new GoogleAuthProvider();
+    showLoader(true);
+    signInWithPopup(auth, provider)
+      .then(result => {
+        showMessage('success', `Bienvenido ${result.user.displayName}`);
+        window.location.href = 'dashboard.html';
+      })
+      .catch(error => showMessage('danger', `Error: ${error.message}`))
+      .finally(() => showLoader(false));
+  });
+
+  // Registro con Google
+  $('#googleRegisterBtn').on('click', function () {
+    const provider = new GoogleAuthProvider();
+    showLoader(true);
+    signInWithPopup(auth, provider)
+      .then(result => {
+        showMessage('success', `Registro exitoso, bienvenido ${result.user.displayName}`);
+        window.location.href = 'dashboard.html';
+      })
+      .catch(error => showMessage('danger', `Error: ${error.message}`))
+      .finally(() => showLoader(false));
+  });
+
+  // Recuperación de contraseña
+  $('#resetPasswordBtn').on('click', function () {
+    const email = $('#resetEmail').val();
+    if (email) {
+      showLoader(true);
+      sendPasswordResetEmail(auth, email)
+        .then(() => showMessage('success', 'Correo de recuperación enviado'))
+        .catch(error => showMessage('danger', `Error: ${error.message}`))
+        .finally(() => showLoader(false));
+    } else {
+      showMessage('warning', 'Por favor, ingresa un correo válido.');
+    }
+  });
+
+  // Alternar entre formularios
+  $('#linkToRegister').on('click', function (e) {
+    e.preventDefault();
+    $('#loginForm').removeClass('active');
+    $('#registerForm').addClass('active');
+  });
+
+  $('#linkToLogin').on('click', function (e) {
+    e.preventDefault();
+    $('#registerForm').removeClass('active');
+    $('#loginForm').addClass('active');
+  });
+
+  $('#linkForgotPassword').on('click', function (e) {
+    e.preventDefault();
+    $('#loginForm').removeClass('active');
+    $('#forgotPasswordForm').addClass('active');
+  });
+
+  $('#linkBackToLogin').on('click', function (e) {
+    e.preventDefault();
+    $('#forgotPasswordForm').removeClass('active');
+    $('#loginForm').addClass('active');
+  });
+</script>
 </body>
 </html>
