--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <li class="navbar__item nav-item"><a class="navbar__link nav-link" href="#"><i class="fas fa-cogs"></i> Opción 3</a></li>
             <li class="navbar__item nav-item"><a class="navbar__link nav-link" href="#"><i class="fas fa-envelope"></i> Opción 4</a></li>
             <li class="navbar__item nav-item"><a class="navbar__link nav-link" href="login.html"><i class="fas fa-envelope"></i> Login</a></li>
+            <li class="navbar__item nav-item"><a class="navbar__link nav-link" target="_blank" href="https://virtual.neekworld.cl/moodle41/login/index.php"><i class="fas fa-envelope"></i>Aula Virtual</a></li>
         </ul>
     </div>
 </nav>
